--- a/Energizer/index.html
+++ b/Energizer/index.html
@@ -9,26 +9,22 @@
     <script src="lib/p5.js"></script>
 </head>
 <body>
-    <h1><span class="title">ENERGIZER</span></h1>
+    <h1>E   N   E   R   G   I   Z   E   R</h1>
     <p>Not this!</p>
 
+    <img src="pic/Notthis.webp.png" alt="">   
+    
     <img src="pic/sunflower.webp" alt="">
 
     <p>BUT THIS!!!!</p>
-    <div id="canvasWrapper"></div>
+
+    <img src="pic/Butthis.webp.png" alt="">   
     
+    <div id="canvasWrapper"></div>
 
+    <h2>The art of the nature!</h2>
 
-
-
-
-
-
-
-
-
-
-
+    <h3>The killer of hunger!</h3>
 
     <!-- the js file should be included as the last thing in the body -->
     <script src="sketch.js"></script>
