--- a/project-b-draft/index.html
+++ b/project-b-draft/index.html
@@ -21,7 +21,7 @@
   <p><div class="Design">Start Here!</div></span></p>
   <img src="libraries/try-now.jpg.png" alt="" class="trythis">
 
-  <p><div class="Text">You can generate beautify cloud and sun pictures everytime you refresh the website!!!</div></p>
+  <p><div class="Text">You can generate beautiful cloud and sun pictures every time you refresh the website!!!</div></p>
 
   <p><div class="empty"></div></p>
   <img src="libraries/sun-cloud.jpg" alt="" class="sun">
