--- a/project-b-draft/index.html
+++ b/project-b-draft/index.html
@@ -16,15 +16,15 @@
 
 <body>
 
-  <h1><span class="M">C</span>LOUD <span class="C">C</span><span class="R">REATOR</span></h1>
+  <h1><span class="M">B</span>UDDY <span class="C">C</span><span class="R">REATOR</span></h1>
 
   <p><div class="Design">Start Here!</div></span></p>
   <img src="libraries/try-now.jpg.png" alt="" class="trythis">
 
-  <p><div class="Text">You can generate beautiful cloud and sun pictures every time you refresh the website!!!</div></p>
+  <p><div class="Text">You can generate a cool buddy with this website!!!</div></p>
 
   <p><div class="empty"></div></p>
-  <img src="libraries/sun-cloud.jpg" alt="" class="sun">
+  <img src="libraries/buddy.png" alt="" class="sun">
   <!-- <div class="image-container">
     <img src="libraries/monster1.png" alt="Image 1">
     <img src="libraries/monster2.png" alt="Image 2">
