--- a/project-b-draft/index.html
+++ b/project-b-draft/index.html
@@ -5,45 +5,30 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>CCLab Project</title>
+  <title>Buddy</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <script src="libraries/p5.min.js"></script>
-  <!-- Uncomment the line below if you use audio. -->
-  <!-- <script src="libraries/p5.sound.min.js"></script> -->
+ 
 </head>
 
 <body>
 
   <h1><span class="M">B</span>UDDY <span class="C">C</span><span class="R">REATOR</span></h1>
 
-  <p><div class="Design">Start Here!</div></span></p>
-  <img src="libraries/try-now.jpg.png" alt="" class="trythis">
-
   <p><div class="Text">You can generate a cool buddy with this website!!!</div></p>
 
-  <p><div class="empty"></div></p>
-  <img src="libraries/buddy.png" alt="" class="sun">
-  <!-- <div class="image-container">
-    <img src="libraries/monster1.png" alt="Image 1">
-    <img src="libraries/monster2.png" alt="Image 2">
-    <img src="libraries/monster3.png" alt="Image 3">
-    <img src="libraries/monster4.png" alt="Image 4">
-    <img src="libraries/monster5.png" alt="Image 5">
-    <img src="libraries/monster6.png" alt="Image 6">
-  </div> -->
-  
+  <p><div class="Read">When you proceed you will see a canvas which you can use to create a character with customizable body parts!</div></p>
 
+  <p><div class="Instruction">Instruction: You can choose the shape of the body, arms, legs and head you want based on the shapes provided. Once you have selected a shape, you may click the "Next" button to choose another body part. You can always use the "Back" button to move back and reselect any body part. Each arm and leg moves differently ! So different combinations of arms and different legs will give you different ways to move! Use your imagination to create a super cool buddy! Oh, by the way, when you have selected all the body parts, you can save your buddy through the "Save" button.</div></p>
 
+  <p><div class="pic1"></div></p>
+  <img src="libraries/buddy.png" alt="">
+  <p><div class="pic2"></div></p>
+  <img src="libraries/buddy2.png" alt="" class="pic2">
 
-
-
-
-
-
-  <!-- the following div will contain the p5 canvas. -->
-  <div id="canvasContainer"></div>
+  <div class="Proceed"><a href="http://127.0.0.1:5500/project-b-draft%20copy/index.html">Proceed</a></div>
 
   <!-- the script tag below should always be at the bottom, right before the closing body tag -->
   <script src="sketch.js"></script>
