--- a/Project-B-Buddy/index.html
+++ b/Project-B-Buddy/index.html
@@ -28,7 +28,7 @@
   <p><div class="pic2"></div></p>
   <img src="libraries/buddy2.png" alt="" class="pic2">
 
-  <div class="Proceed"><a href="http://127.0.0.1:5500/project-b-draft%20copy/index.html">Proceed</a></div>
+  <div class="Proceed"><a href="">Proceed</a></div>
 
   <!-- the script tag below should always be at the bottom, right before the closing body tag -->
   <script src="sketch.js"></script>
